--- a/app/blocks/copy-data/copy-data.pug
+++ b/app/blocks/copy-data/copy-data.pug
@@ -3,3 +3,5 @@ mixin copy-data(data)
     +nd-form-box(data.placeholder || '')._bg-white.__field
       +nd-input(type="text" name=data.name data-copy-target=data.copyName value=data.copyValue placeholder=(data.placeholder || '') readonly)._h40
     +nd-button('button')._pad10.__button.js-copy(type="button" data-copy-from=data.copyName)!=data.buttonName
+    if (data.copySuccess)
+      +e.success-copied(data-copy-success=data.copyName)!= data.copySuccess
