--- a/app/components/layout/layout.scss
+++ b/app/components/layout/layout.scss
@@ -267,9 +267,9 @@
         }
       }
 
-      &.layout__column_start_offer {
-        @include rule(top, (sm: 60));
-      }
+      // &.layout__column_start_offer {
+      //   @include rule(top, (sm: 60));
+      // }
 
       .layout-space-active & {
         &[data-layout*="space"] {
