--- a/app/pages/newest/single-offer/single-offer.pug
+++ b/app/pages/newest/single-offer/single-offer.pug
@@ -28,7 +28,10 @@ block content
 
 block panels
   +share-popover#share-popover
-  //- +nd-offer-panel.nd-hide-from-md
+  +offer-description-panel()._fixed.is-visible.nd-hide-from-sm
+    +e.buttons
+      +nd-button._pad10._black.__button.js-nd-arrange-viewing(href="#nd-popup-arrange-viewing" data-min-date="2021-15-4" data-max-date="2021-20-8") Arrange viewing
+      +nd-button._pad10.__button(href="#") Request reservation
 
 block popups
   +nd-popup-arrange-viewing#nd-popup-arrange-viewing
