--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -24,6 +24,8 @@
 @import '../blocks/page/nd-page.scss';
 @import '../blocks/promo-slider/promo-slider.scss';
 @import '../components/promo/promo.scss';
+@import '../blocks/modal/modal.scss';
+@import '../blocks/modals/modals.scss';
 @import '../blocks/section/nd-section.scss';
 @import '../blocks/slider/nd-slider.scss';
 @import '../blocks/space/nd-space.scss';
@@ -42,6 +44,7 @@
 @import '../components/lead/nd-lead.scss';
 @import '../components/main-menu/nd-main-menu.scss';
 @import '../components/user-menu-panel/user-menu-panel.scss';
+
 
 .nd-container {
   width: 100%;
