--- a/app/blocks/offer-description-panel/offer-description-panel.scss
+++ b/app/blocks/offer-description-panel/offer-description-panel.scss
@@ -125,4 +125,19 @@
       pointer-events: auto;
     }
   }
+
+  &_fixed {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    z-index: 23;
+    background-color:$nd-color-basic-light;
+    opacity: 1;
+    pointer-events: auto;
+
+    @include rule(height, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 60));
+    @include rule(padding-right, (xl: 20px, xlg: 20, lg: 16, md: 20, sm: 20));
+    @include rule(padding-left, (xl: 28px, xlg: 28, lg: 16, md: 16, sm: 20));
+  }
 }
