--- a/app/components/share-popover/share-popover.pug
+++ b/app/components/share-popover/share-popover.pug
@@ -2,7 +2,7 @@ mixin share-popover()
   +b.FORM.share-popover&attributes(attributes)(data-popover)
     +e.SECTION.top
       +e.H3.title Share link
-      +copy-data({copyName: 'shareLink', copyValue: 'spacepool.com/space/Canvas_Data', name: 'shareLink', placeholder: '', buttonName: 'Copy link'})
+      +copy-data({copyName: 'shareLink', copyValue: 'spacepool.com/space/Canvas_Data', name: 'shareLink', placeholder: '', buttonName: 'Copy link', copySuccess: 'Link copied'})
     +e.SECTION.bottom
       +e.H3.title Share via
       +share-socials([{icon: 'assets/images/nd/share-mail.svg', href: '#'}, {icon: 'assets/images/nd/share-linkedin.svg', href: '#'}, {icon: 'assets/images/nd/share-viber.svg', href: '#'}, {icon: 'assets/images/nd/share-skype.svg', href: '#'}, {icon: 'assets/images/nd/share-telegram.svg', href: '#'}])
