--- a/app/components/space-description/space-description-v2.pug
+++ b/app/components/space-description/space-description-v2.pug
@@ -28,7 +28,7 @@ mixin space-description-v2()
           +e.list
             each item, index in ['assets/images/nd/space33.jpg', 'assets/images/nd/space32.jpg', 'assets/images/nd/space34.jpg']
               +nd-results-item._mt-1
-                +offer-card()._small.js-layout-show(data-layout-target="offer")
+                +offer-card()._small.js-layout-show(data-layout-target="offer" data-layout-title='Suite G0' data-layout-title-color='green')
                   +e.media
                     +e.PICTURE.image
                       source(srcset=item)
@@ -43,7 +43,7 @@ mixin space-description-v2()
               +e.name HOT DESK
           +e.list
             +nd-results-item._mt-1
-              +offer-card()._small.js-layout-show(data-layout-target="offer")
+              +offer-card()._small.js-layout-show(data-layout-target="offer" data-layout-title='Hot desk available on demand' data-layout-title-color='orange')
                 +e.media
                   +e.PICTURE.image
                     source(srcset='assets/images/nd/space22.jpg')
@@ -53,7 +53,7 @@ mixin space-description-v2()
                   +e.pay
                     +e.price £ 350.00
             +nd-results-item._mt-1
-              +offer-card()._small.js-layout-show(data-layout-target="offer")
+              +offer-card()._small.js-layout-show(data-layout-target="offer" data-layout-title='Day pass Hot desk' data-layout-title-color='orange')
                 +e.media
                   +e.PICTURE.image
                     source(srcset='assets/images/nd/space32.jpg')
@@ -70,7 +70,7 @@ mixin space-description-v2()
           +e.list
             each item, index in ['assets/images/nd/space33.jpg', 'assets/images/nd/space34.jpg']
               +nd-results-item._mt-1
-                +offer-card()._small.js-layout-show(data-layout-target="offer")
+                +offer-card()._small.js-layout-show(data-layout-target="offer" data-layout-title="Suite G0" data-layout-title-color='red')
                   +e.media
                     +e.PICTURE.image
                       source(srcset=item)
