--- a/app/pages/newest/space/space-v5.pug
+++ b/app/pages/newest/space/space-v5.pug
@@ -33,7 +33,7 @@ block content
               +e.name PRIVATE OFFICES
           each item in getData('space-offers-po.json')
             +nd-results-item._mt23
-              +nd-space()._single-offer._single-offer_short.js-layout-show(data-layout-target="offer")
+              +nd-space()._single-offer._single-offer_short.js-layout-show(data-layout-target="offer" data-layout-title=item.title data-layout-title-color='green')
                 if item.gallery && item.gallery.images.length === 1
                   +nd-space-media-e()
                     +e.PICTURE.image
@@ -66,6 +66,10 @@ block content
     +e.column_start._start_offer._popup(data-layout="offer")
       +e.wrapper.js-scrollbar-layout
         +offer-description-v2
+        +offer-description-panel()._fixed.is-visible.nd-hide-from-sm
+          +e.buttons
+            +nd-button._pad10._black.__button.js-nd-arrange-viewing(href="#nd-popup-arrange-viewing" data-min-date="2021-15-4" data-max-date="2021-20-8") Arrange viewing
+            +nd-button._pad10.__button(href="#") Request reservation
 
     +e.column_header(data-layout="offer")
       +layout-header({type: 'page', popup: true})._main._page
@@ -75,7 +79,6 @@ block content
 
 block panels
   +share-popover#share-popover
-  //- +nd-offer-panel.nd-hide-from-md
 
 block popups
   +nd-popup-arrange-viewing#nd-popup-arrange-viewing
