fixes favorite button, sidebars, styled-list, fancygallery plan

--- a/app/blocks/lists/lists.scss
+++ b/app/blocks/lists/lists.scss
@@ -68,7 +68,9 @@ ul.styled-list {
   }
 
   li {
-    display: block;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
 
     &::before {
       display: inline-block;
