--- a/app/components/offer-description/offer-description.pug
+++ b/app/components/offer-description/offer-description.pug
@@ -106,7 +106,7 @@ mixin offer-description-v2(stable)
                   td 1 month
           +e.SECTION.section_plan
             +e.H4.title_fz16 Floor Plan
-            +e.PICTURE.image
+            +e.PICTURE.image(data-fancybox='floorplan' data-src="assets/images/nd/floor-plan3.jpg")
               source(src="assets/images/nd/floor-plan3.jpg" srcset="assets/images/nd/floor-plan3.jpg")
               img(src="assets/images/nd/floor-plan3.jpg")
         if stable
