--- a/app/components/space-description/space-description-v2.pug
+++ b/app/components/space-description/space-description-v2.pug
@@ -131,4 +131,4 @@ mixin space-description-v2()
                       +nd-space-text()!=item.text
 
 mixin space-description-panel()
-  +nd-link-icon('nd-burger')._blue._block.space-description-panel.js-layout-tab-redirect.nd-hide-from-sm(href="#" data-layout-tab-target="tab-space-offers" data-tab="tab-space-describe" data-tab-group="tab-space") View listings
+  +nd-link-icon('nd-burger')._blue._block.space-description-panel.active.js-layout-tab-redirect.nd-hide-from-sm(href="#" data-layout-tab-target="tab-space-offers" data-tab="tab-space-describe" data-tab-group="tab-space") View listings
