--- a/app/pages/newest/search/search-types-v3.pug
+++ b/app/pages/newest/search/search-types-v3.pug
@@ -33,7 +33,7 @@ block content
         +nd-results._v2
           each item in getData('new-nd-spaces-search-offer.json')
             +nd-results-item._mt23
-              +nd-space()._single-offer(href="single-offer.html" target="_blank")
+              +nd-space()._single-offer.js-sm-layout-show(data-layout-target="offer" data-layout-title=item.subtitle data-layout-title-color='green' href="single-offer.html" target="_blank")
                 +gallery(item.gallery)._space.__media.js-nd-gallery
                 +e.describe
                   +e.head
