--- a/app/blocks/favorite/favorite.scss
+++ b/app/blocks/favorite/favorite.scss
@@ -3,6 +3,7 @@
 
   display: block;
   flex: none;
+  cursor: pointer;
 
   @include rule(width, (xl: 18px, xlg: 18, lg: 18, md: 18, sm: 18));
   @include rule(height, (xl: 18px, xlg: 18, lg: 18, md: 18, sm: 18));
@@ -22,10 +23,12 @@
     }
   }
 
-  &:hover {
-    svg {
-      stroke: $nd-color-basic;
-      fill: $nd-color-basic;
+  @media (hover: hover) {
+    &:hover {
+      svg {
+        stroke: $nd-color-basic;
+        fill: $nd-color-basic;
+      }
     }
   }
 
