--- a/app/blocks/offer-description-panel/offer-description-panel.scss
+++ b/app/blocks/offer-description-panel/offer-description-panel.scss
@@ -135,6 +135,7 @@
     background-color:$nd-color-basic-light;
     opacity: 1;
     pointer-events: auto;
+    box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.05);
 
     @include rule(height, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 60));
     @include rule(padding-right, (xl: 20px, xlg: 20, lg: 16, md: 20, sm: 20));
