--- a/app/components/space-description/space-description.scss
+++ b/app/components/space-description/space-description.scss
@@ -202,9 +202,9 @@
   background-color: $nd-color-basic-light;
   ;
   display: none;
-  position: absolute;
+  position: fixed;
   bottom: 0;
-  z-index: 3;
+  z-index: 25;
 
   @include screen('sm', max, 2) {
     width: calc(100% + (4000 / 375)*1vw);
