--- a/app/pages/newest/search/search-types-v3.pug
+++ b/app/pages/newest/search/search-types-v3.pug
@@ -61,12 +61,12 @@ block content
 
 
     +e.column_start._start_space._popup(data-layout="space")
-      +e.wrapper.js-scrollbar-layout
+      +e.wrapper
         +space-description-v2
         +space-description-panel
 
     +e.column_end._popup(data-layout="list,space,offer")
-      +e.wrapper.js-scrollbar-layout
+      +e.wrapper
         +nd-results._v2
           +e.divider.nd-hide-from-md
             +space-type._gray._fz12.__type
@@ -105,7 +105,7 @@ block content
                           b £ 2,400 per month
 
     +e.column_start._start_offer._popup(data-layout="offer")
-      +e.wrapper.js-scrollbar-layout
+      +e.wrapper
         +offer-description-v2
         +offer-description-panel()._fixed.is-visible.nd-hide-from-sm
           +e.buttons
