--- a/app/pages/newest/search/search-v3.pug
+++ b/app/pages/newest/search/search-v3.pug
@@ -48,13 +48,13 @@ block content
                 +e.button.hide-from-sm.js-layout-show.js-layout-tab-redirect(data-layout-target="space" data-layout-tab-target="tab-space-offers" data-dead-zone) View all 20 listings
 
     +e.column_start._start_space._popup(data-layout="space")
-      +e.wrapper.js-scrollbar-layout
+      +e.wrapper
         +space-description-v2
         +space-description-panel
 
     +e.column_end._popup.nd-sm-hide(data-layout="list,space,offer")
       +layout-header({type: 'list', popup: true})._sort._popup
-      +e.wrapper.js-scrollbar-layout
+      +e.wrapper
         +nd-results._v2
           +e.divider.nd-hide-from-md
             +space-type._gray._fz12.__type
@@ -93,7 +93,7 @@ block content
                           b £ 2,400 per month
 
     +e.column_start._start_offer._popup(data-layout="offer")
-      +e.wrapper.js-scrollbar-layout
+      +e.wrapper
         +offer-description-v2
         +offer-description-panel()._fixed.is-visible.nd-hide-from-sm
           +e.buttons
