offer search and header search

--- a/app/blocks/label/label.scss
+++ b/app/blocks/label/label.scss
@@ -11,4 +11,14 @@
   @include rule(font-size, (xl: 10px, xlg: 10, lg: 10, md: 10, sm: 10));
   @include rule(padding-left, (xl: 1px, xlg: 1, lg: 1, md: 1, sm: 1));
   @include rule(padding-right, (xl: 1px, xlg: 1, lg: 1, md: 1, sm: 1));
+
+  &_v2 {
+    background-color: $nd-color-main;
+    font-family: $font-main;
+    font-weight: 600;
+    line-height: 1.76;
+
+    @include rule(font-size, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 15));
+    @include rule(padding, (xl: 3px 13px, xlg: 3 13, lg: 3 13, md: 3 13, sm: 3 13));
+  }
 }
