--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -285,8 +285,6 @@
     overflow: visible;
 
     @include screen('sm', max, 2) {
-      background-color: $nd-color-basic-light;
-      box-shadow: boxShadow(0, 2, 2, 0,rgba(0, 0, 0, 0.06), 375);
       overflow: hidden;
     }
 
@@ -348,6 +346,7 @@
           display: flex;
           justify-content: flex-start;
           overflow: hidden;
+          padding: wPxtovw(8, sm);
         }
 
         &::before {
