--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -277,7 +277,9 @@ $icon-angle-arrow-next: url('../images/bg/bg-angle-next.svg');
 $icon-angle-small-next: url('../images/bg/bg-angle-small-next.svg');
 $icon-double-check: url('../images/bg/bg-double-blue-check.svg');
 $icon-team: url('../images/bg/bg-search-team.svg');
+$icon-team2: url('../images/bg/bg-team-sm.svg');
 $icon-location: url('../images/bg/bg-search-location.svg');
+$icon-location2: url('../images/bg/bg-search-location-sm.svg');
 $icon-team-blue: url('../images/bg/bg-search-team-blue.svg');
 $icon-location-blue: url('../images/bg/bg-search-location-blue.svg');
 $icon-type: url('../images/bg/bg-search-type.svg');
