--- a/app/blocks/filter-section/filter-section.pug
+++ b/app/blocks/filter-section/filter-section.pug
@@ -13,6 +13,8 @@ mixin filter-section(data)
 
 mixin filter-section-header()
   +b.filter-section&attributes(attributes)
+    +e.A.button.js-layout-close-active.nd-hide-from-sm(href="#")
+      +icon('back-arrow-mid').__icon_back
     +e.group
       +nd-filter.__filter
     +e.item.nd-hide-sm
