--- a/app/blocks/filter-section/filter-section.scss
+++ b/app/blocks/filter-section/filter-section.scss
@@ -19,11 +19,17 @@
     align-items: center;
 
     @include screen('sm', max, 2) {
-      width: 100%;
+      flex: 1;
     }
 
     &:not(:last-child) {
       @include rule(margin-right, (xl: 27px, xlg: 27, lg: 15, md: 15, sm: 0));
+    }
+  }
+
+  &__filter {
+    @include screen('sm', max, 2) {
+      width: 100%;
     }
   }
 
@@ -50,6 +56,64 @@
 
     &:not(:last-child) {
       @include rule(margin-right, (xl: 16px, xlg: 16, lg: 16, md: 16, sm: 16));
+    }
+  }
+
+  &__button {
+    @include rule(padding-left, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 12));
+    @include rule(padding-right, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 12));
+    @include rule(font-size, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 15));
+    @include rule(width, (xl: 40px, xlg: 40, lg: 40, md: 40, sm: 44));
+
+    display: flex;
+    justify-content: flex-start;
+    color: $nd-color-basic-light;
+    font-weight: 600;
+    height: 100%;
+    box-sizing: border-box;
+
+    @include screen('sm', max, 2) {
+      border-radius: 50%;
+      background-color: $nd-color-basic-light;
+      box-shadow: 0px wPxtovw(3.2, sm) wPxtovw(7.69511, sm) rgba(0, 0, 0, 0.3);
+    }
+
+    span {
+      height: 100%;
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+
+    &:not(:last-child) {
+      @include rule(margin-right, (sm: 17));
+    }
+  }
+
+  &__icon {
+    display: inline-block;
+    fill: currentColor;
+    flex: none;
+    height: 100%;
+
+    @include rule(width, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 15));
+    // @include rule(height, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 15));
+
+    &_back {
+      fill: $nd-color-basic;
+
+      @include rule(width, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
+      @include rule(height, (sm: 44));
+    }
+
+    &_cross {
+      @include rule(width, (xl: 12px, xlg: 12, lg: 12, md: 12, sm: 12));
+      // @include rule(height, (xl: 12px, xlg: 12, lg: 12, md: 12, sm: 12));
+    }
+
+    &:not(:last-child) {
+      @include rule(margin-right, (xl: 12px, xlg: 12, lg: 12, md: 12, sm: 12));
     }
   }
 }
