--- a/app/blocks/modal-output/modal-output.scss
+++ b/app/blocks/modal-output/modal-output.scss
@@ -143,13 +143,13 @@
   }
 
   &_special {
-    @include rule(padding-left, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 13));
+    @include rule(padding-left, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 10));
     @include rule(padding-right, (xl: 35px, xlg: 35, lg: 35, md: 35, sm: 5));
-    @include rule(padding-top, (xl: 5px, xlg: 5, lg: 5, md: 5, sm: 5));
+    @include rule(padding-top, (xl: 5px, xlg: 5, lg: 5, md: 5, sm: 7));
     @include rule(padding-bottom, (xl: 5px, xlg: 5, lg: 5, md: 5, sm: 8));
-    @include rule(height, (xl: 46px, xlg: 46, lg: 46, md: 46, sm: 60));
+    @include rule(height, (xl: 46px, xlg: 46, lg: 46, md: 46, sm: 44));
     @include rule(width, (xl: 158px, xlg: 158, lg: 150, md: 150));
-    @include rule(border-radius, (xl: 35px, xlg: 35, lg: 35, md: 35, sm: 0));
+    @include rule(border-radius, (xl: 35px, xlg: 35, lg: 35, md: 35, sm: 35));
 
     transition: background $ease-main;
     border: none;
@@ -226,8 +226,7 @@
         transition: color $ease-main,
         font $ease-main;
 
-        @include rule(font-size, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 12));
-        @include rule(margin-left, (sm: -4));
+        @include rule(font-size, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 11));
 
         @include screen('sm', max, 2) {
           font-family: $font-main;
@@ -245,7 +244,7 @@
             background-size: contain;
           }
 
-          @include rule(margin-right, (sm: 5));
+          @include rule(margin-right, (sm: 2));
         }
       }
 
@@ -278,6 +277,10 @@
         line-height: (13 / 11);
 
         @include rule(font-size, (xl: 11px, xlg: 11, lg: 11, md: 11, sm: 12));
+
+        @include screen('sm', max, 2) {
+          display: flex;
+        }
       }
     }
 
@@ -321,11 +324,11 @@
     #{$b} {
       &__placeholder {
         &::before {
-          @include rule(width, (sm: 9));
-          @include rule(height, (sm: 12));
+          @include rule(width, (sm: 7));
+          @include rule(height, (sm: 10));
 
           @include screen('sm', max, 2) {
-            background-image: $icon-location;
+            background-image: $icon-location2;
           }
         }
       }
@@ -349,11 +352,11 @@
     #{$b} {
       &__placeholder {
         &::before {
-          @include rule(width, (sm: 17));
-          @include rule(height, (sm: 9));
+          @include rule(width, (sm: 14));
+          @include rule(height, (sm: 8));
 
           @include screen('sm', max, 2) {
-            background-image: $icon-team;
+            background-image: $icon-team2;
           }
         }
       }
@@ -371,8 +374,8 @@
     #{$b} {
       &__placeholder {
         &::before {
-          @include rule(width, (sm: 11));
-          @include rule(height, (sm: 11));
+          @include rule(width, (sm: 9));
+          @include rule(height, (sm: 9));
 
           @include screen('sm', max, 2) {
             background-image: $icon-type2;
