--- a/app/blocks/space-type/space-type.scss
+++ b/app/blocks/space-type/space-type.scss
@@ -30,6 +30,11 @@
     font-size: pxtovw(7, 375);
   }
 
+  &_proxima {
+    font-family: $font-main;
+    font-weight: 700;
+  }
+
   &__box {
     font-size: 0;
     line-height: 0;
@@ -177,6 +182,14 @@
 
   &_gray {
     color: $nd-color-gray-text;
+  }
+
+  &_white {
+    color: $nd-color-basic-light;
+
+    &_shadow {
+      text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+    }
   }
 
   &_big {
