--- a/app/blocks/space/nd-space.scss
+++ b/app/blocks/space/nd-space.scss
@@ -256,6 +256,67 @@
     }
   }
 
+  &__preview {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: auto;
+    padding-top: 0;
+
+    #{$b}_single-offer & {
+      box-sizing: border-box;
+      flex: none;
+      border-radius: 3px;
+      overflow: hidden;
+
+      @include rule(width, (xl: 284px, xlg: 284, lg: 284, md: 284));
+      @include rule(border-radius, (xl: 3px, xlg: 3, lg: 3, md: 3, sm: 0));
+
+      @include screen('sm', max, 2) {
+        width: 100%;
+      }
+    }
+
+    #{$b}_single-offer_short & {
+      @include rule(width, (xl: 284px, xlg: 284, lg: 205));
+
+      position: relative;
+
+      @include screen('md', max, 2) {
+        width: 100%;
+      }
+    }
+
+    #{$b}__media {
+      width: 100%;
+      z-index: 1;
+
+      &:not(:first-child) {
+        margin-top: 0;
+      }
+    }
+  }
+
+  &__preview-info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    box-sizing: border-box;
+    display: block;
+    pointer-events: none;
+
+    @include rule(padding, (xl: 16px, xlg: 16, lg: 16, md: 16, sm: 16));
+
+    .label {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+    }
+  }
+
   &__image {
     position: relative;
     display: block;
@@ -701,12 +762,12 @@
     }
 
     #{$b}_single-offer & {
-      @include rule(font-size, (xl: 20px, xlg: 20, lg: 18, md: 20, sm: 20));
+      @include rule(font-size, (xl: 20px, xlg: 20, lg: 18, md: 20, sm: 18));
 
       line-height: (24 / 20);
 
       &:not(:first-child) {
-        @include rule(margin-top, (xl: 9px, xlg: 9, lg: 16, md: 9, sm: 9));
+        @include rule(margin-top, (xl: 9px, xlg: 9, lg: 16, md: 9, sm: 0));
       }
     }
 
@@ -1262,7 +1323,7 @@
       @include rule(padding-left, (xl: 27px, xlg: 27, lg: 27, md: 27, sm: 18));
 
       @include screen('sm', max, 2) {
-        padding: pxtovw(13, 375) pxtovw(18, 375) pxtovw(20, 375);
+        padding: pxtovw(15, 375) pxtovw(18, 375);
       }
     }
 
@@ -1374,7 +1435,7 @@
 
   &__table {
     &:not(:first-child) {
-      @include rule(margin-top, (xl: 34px, xlg: 34, lg: 20, md: 34, sm: 34));
+      @include rule(margin-top, (xl: 34px, xlg: 34, lg: 20, md: 34, sm: 12));
     }
 
     #{$b}_single-offer_short & {
